fixed dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,7 @@
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
     --radius: 0.5rem;
-    --grid-bg-color: #ffffff; 
+    --grid-bg-color: #726262; 
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
